Fixed Webkit layout problem
git-svn-id: https://qooxdoo.svn.sourceforge.net/svnroot/qooxdoo/trunk@23908 61aaf1ca-a10e-0410-b9fb-ac63ec25887f

--- a/qooxdoo/component/testrunner2/source/resource/testrunner2/view/html/css/testrunner2.css
+++ b/qooxdoo/component/testrunner2/source/resource/testrunner2/view/html/css/testrunner2.css
@@ -57,7 +57,8 @@ h1 {
 #qxtestrunner_tests {
   float: left;
   width: 42%;
-  margin: 10px 0 30px 0;
+  margin-top: 10px;
+  padding-bottom: 30px;
   font-size: 0.9em;
 }
 
